# COMPX230-Interactive

./: BlazorApp.slnx  README.md  package-lock.json
BlazorApp/: App.razor  BlazorApp.csproj  _Imports.razor
BlazorApp/Classes/: BoardCheck.cs  BoardState.cs  Components.cs  EQUs.cs  LevelComponents.cs  ParallelComponents.cs  ParallelState.cs  Tabs.cs  ToolboxComponents.cs  UIComponents.cs  WRAMPComponents.cs
BlazorApp/Layout/: MainLayout.razor  NavMenu.razor
BlazorApp/Pages/: Blockly.razor  Checkmark.razor  GPRegisters.razor  Home.razor  Level.razor  Level1.razor  LevelHelloWorld.razor  LevelIntro.razor  LevelLink.razor  LevelOne.razor  LevelParallel.razor  LevelSelector.razor  LevelTwo.razor  Memory.razor  Page.razor  ParallelRegisters.razor  RAM.razor  Registers.razor  Sandbox.razor  SerialPort.razor  WSIM.razor
BlazorApp/Pages/Levels/: LevelBss.razor  LevelIntro.razor  LevelOne.razor  LevelThree.razor  LevelTwo.razor  Sandbox.razor
BlazorApp/Pages/PageComponents/: LevelLink.razor  LevelSelector.razor
BlazorApp/Pages/WSIMComponents/: Memory.razor  Registers.razor  SSD.razor  Visualise.razor
BlazorApp/Pages/wsimComponents/: Memory.razor  Visualise.razor
BlazorApp/Properties/: launchSettings.json
BlazorApp/WSIM/: RexBoard.cs
BlazorApp/wsim/: Bus.cs  RexBoard.cs  SimpleWrampCpu.cs
BlazorApp/wsim/Rex/: ButtonInterrupt.cs  MemoryDevice.cs  ParallelIO.cs  SerialIO.cs  Timer.cs
BlazorApp/wsim/Wramp/: ALU.cs  (+3 more)
BlazorApp/wwwroot/: index.html
wrampToolchainSource/: CMakeCache.txt  CMakeLists.txt  Makefile  assembler.cpp  cmake_install.cmake  linker.cpp
(+17 files in other folders)
